# nihonshu

./: .gitignore  Dockerfile  README.md  docker-compose.yml  download.py  pyproject.toml
src/code/: meigara_classification_baseline.ipynb  tutorial.ipynb
src/output/: submission_cpt-sake-tutorial.csv
src/submissions/: meigara_classification_baseline.csv
