[tool.poetry]
name = "nihonshu-image-search"
version = "0.1.0"
description = "Project for ML"
authors = ["kiichiro3290 <kai.kiichiro.418@s.kyushu-u.ac.jp>"]
readme = "README.md"
packages = [{include = "nihonshu-image-search"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
keras = "^2.12.0"
scikit-learn = "^1.2.2"
pywavelets = "^1.4.1"
jupyterlab = "^4.0.0"
mlflow = "^2.3.2"
faiss-cpu = "^1.7.4"
timm = "^0.9.2"
albumentations = "^1.3.1"
torch = "2.0.0"
tqdm = "^4.65.0"
faiss-gpu = "^1.7.2"
opencv-python = "^4.7.0.72"
scikit-image = "^0.21.0"
openmim = "^0.3.9"
japanize-matplotlib = "^1.1.3"
missingno = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat-footnote = "^0.1.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"